# ai-powered-sds011-sensor-reader

./: .gitignore  CMakeLists.txt  CROSS_PLATFORM.md  LICENSE  Makefile  PERMISSION_ENHANCEMENT.md  README.md  build.sh  debug_detailed.cpp  debug_discovery.cpp  debug_plugin_test.cpp  debug_test  read.cxx  test_discovery.cpp  test_discovery_debug.cpp  test_final.cpp  test_permissions.cpp  test_plugin_system.cpp  test_tui.cpp  test_tui.cxx
.github/workflows/: ci.yml
debug/: Makefile  README.md  debug_discovery.cpp  test_ncurses.cpp  test_unicode.cpp
include/: app_utils.h  interactive_tui.h  plugin_interface.h  plugin_manager.h  sds011_plugin.h  sds011_reader.h  sds011_tui.h  sensor_plugin.h  sensor_registry.h
plugins/sds011/: sds011_plugin.cpp
src/: app_utils.cpp  interactive_tui.cpp  main.cpp  plugin_manager.cpp  sds011_plugin.cpp  sds011_reader.cpp  sds011_tui.cpp  sensor_registry.cpp
tests/: test_tui.cpp  test_unit.cpp
